Support multiple SRV records for mutliple etcd instances on the same node.

--- a/ansible/roles/kraken.nodePool/kraken.nodePool.etcd/templates/etcd.units.etcd.part.jinja2
+++ b/ansible/roles/kraken.nodePool/kraken.nodePool.etcd/templates/etcd.units.etcd.part.jinja2
@@ -19,6 +19,7 @@
     RestartSec=15
     Restart=always
     KillMode=none
+    ExecStartPre=/bin/bash -xc 'while [[ $(/usr/bin/dig SRV +noall +short +answer _etcd-server{% if etcd.ssl %}-ssl{% endif %}._tcp.{{ etcd.name }}.{{ cluster_node_tuple.1.name }}.{{ cluster_node_tuple.0.name }}.internal | /usr/bin/wc -l) -ne  {{ cluster_node_tuple.1.count }} ]] ; do sleep 1 ; done'
     ExecStartPre=/usr/bin/mkdir -p /ephemeral/{{etcd.name}}
     ExecStart=/usr/bin/rkt run --net=host \
      --stage1-path=/usr/lib/rkt/stage1-images/stage1-fly.aci \
@@ -45,7 +46,7 @@
      --key-file=/etc/{{etcd.name}}/ssl/server-key.pem \
      --client-cert-auth \
 {% endif %}
-     --discovery-srv {{ etcd.name }}.{{ cluster_node_tuple.0.name }}internal \
+     --discovery-srv {{ etcd.name }}.{{ cluster_node_tuple.1.name }}.{{ cluster_node_tuple.0.name }}internal \
      --initial-advertise-peer-urls {% if etcd.ssl == true %}https{% else %}http{% endif %}://${DEFAULT_IPV4}:{{etcd.peerPorts[0]}} \
 {% if etcd.uuidToken is defined and etcd.uuidToken %}
      --initial-cluster-token {{ clusterUuidToken }} \
