--- a/ansible/roles/kraken.provider/kraken.provider.aws/templates/kraken.provider.aws.module.etcd.tf.jinja2
+++ b/ansible/roles/kraken.provider/kraken.provider.aws/templates/kraken.provider.aws.module.etcd.tf.jinja2
@@ -132,7 +132,6 @@ resource "aws_route53_record" "{{node.name}}_vm_A_record_{{node_idx}}" {
 
 {% endfor %} # node_idx
 
-
 resource "aws_route53_record" "{{node.name}}_A_record_all" {
   zone_id   = "${var.route53_zone_id}"
   name      = "{{node.name}}.${var.etcds_name}.internal"
@@ -141,31 +140,27 @@ resource "aws_route53_record" "{{node.name}}_A_record_all" {
   records   = [{% set comma = joiner(",") %}{% for node_idx in range(1, node.count+1) %}{{ comma() }}"${aws_instance.{{node.name}}_{{node_idx}}.private_ip}"{% endfor %}]
 }
 
-
-
-resource "aws_route53_record" "{{node.name}}_SRV_client" {
+{% for etcd in node.etcdConfigs %}
+resource "aws_route53_record" "{{ etcd.name }}_{{ node.name }}_SRV_client" {
   zone_id   = "${var.route53_zone_id}"
-  name      = "_etcd-client-ssl._tcp.{{node.name}}.${var.etcds_name}.internal"
+  name      = "_etcd-client-ssl._tcp.{{ etcd.name }}.{{ node.name }}.${var.etcds_name}.internal"
   type      = "SRV"
   ttl       = "300"
-{% for etcd in node.etcdConfigs %}
   records   = [{% set comma = joiner(",") %}{% for node_idx in range(1, node.count+1) %}{{ comma() }}"0 0 {{etcd.clientPorts[0]}} ${aws_instance.{{node.name}}_{{node_idx}}.id}.{{node.name}}.${var.etcds_name}.internal"{% endfor %}]
-{% endfor %}
 }
 
-resource "aws_route53_record" "{{node.name}}_SRV_server" {
+resource "aws_route53_record" "{{ etcd.name }}_{{ node.name }}_SRV_server" {
   zone_id   = "${var.route53_zone_id}"
-  name      = "_etcd-server-ssl._tcp.{{node.name}}.${var.etcds_name}.internal"
+  name      = "_etcd-server-ssl._tcp.{{ etcd.name }}.{{ node.name }}.${var.etcds_name}.internal"
   type      = "SRV"
   ttl       = "300"
-{% for etcd in node.etcdConfigs %}
   records   = [{% set comma = joiner(",") %}{% for node_idx in range(1, node.count+1) %}{{ comma() }}"0 0 {{etcd.peerPorts[0]}} ${aws_instance.{{node.name}}_{{node_idx}}.id}.{{node.name}}.${var.etcds_name}.internal"{% endfor %}]
-{% endfor %}
 }
+{% endfor %} # for etcd in node.etcdConfigs
 
 {% endif %}
 {% endfor %} # etcd
 
 output "etcd_dependency" {
-value = "dummy"
+  value = "dummy"
 }
