--- a/ansible/roles/kraken.nodePool/kraken.nodePool.master/templates/units.kubelet.part.jinja2
+++ b/ansible/roles/kraken.nodePool/kraken.nodePool.master/templates/units.kubelet.part.jinja2
@@ -17,6 +17,7 @@
       --volume etc-cni,kind=host,source=/etc/cni \
       --volume etc-kubernetes,kind=host,source=/etc/kubernetes \
       --volume etc-etcd-ssl,kind=host,source=/etc/etcd/ssl \
+      --volume etc-etcdEvents-ssl,kind=host,source=/etc/etcdEvents/ssl \
       --volume etc-ssl-certs,kind=host,source=/usr/share/ca-certificates \
       --volume var-lib-docker,kind=host,source=/var/lib/docker \
       --volume var-lib-kubelet,kind=host,source=/var/lib/kubelet \
@@ -27,6 +28,7 @@
       --mount volume=etc-cni,target=/etc/cni \
       --mount volume=etc-kubernetes,target=/etc/kubernetes \
       --mount volume=etc-etcd-ssl,target=/etc/etcd/ssl \
+      --mount volume=etc-etcdEvents-ssl,target=/etc/etcdEvents/ssl \
       --mount volume=etc-ssl-certs,target=/etc/ssl/certs \
       --mount volume=var-lib-docker,target=/var/lib/docker \
       --mount volume=var-lib-kubelet,target=/var/lib/kubelet \
